# CDT.NET

./: .editorconfig  .gitignore  .last-sync-commit  CDT.NET.slnx  Program.cs  README.md
.github/workflows/: ci-cd.yml  comparison-benchmarks.yml  upstream-sync.yml
benchmark/CDT.Benchmarks/: Benchmarks.cs  CDT.Benchmarks.csproj  PredicatesBenchmarks.cs
benchmark/CDT.Comparison.Benchmarks/: CDT.Comparison.Benchmarks.csproj  ComparisonBenchmarks.cs  Program.cs  README.md
benchmark/CDT.Comparison.Benchmarks/native/cdt_wrapper/: CMakeLists.txt  cdt_wrapper.cpp
benchmark/CDT.Comparison.Benchmarks/native/cgal_wrapper/: CMakeLists.txt  cgal_wrapper.cpp
benchmark/CDT.Comparison.Benchmarks/native/spade_wrapper/: Cargo.toml
benchmark/CDT.Comparison.Benchmarks/native/spade_wrapper/src/: lib.rs
src/CDT.Core/: AssemblyInfo.cs  CDT.Core.csproj  CdtUtils.cs  KdTree.cs  Predicates.cs  TopologyVerifier.cs  TriangleUtils.cs  Triangulation.cs  Types.cs
src/CDT.Core/Predicates/: PredicatesAdaptive.cs  PredicatesExact.cs
test/CDT.Tests/: CDT.Tests.csproj  GroundTruthTests.cs  PredicatesTests.cs  ReadmeExamplesTests.cs  TriangulationTests.cs  xunit.runner.json
test/CDT.Tests/expected/: Capital A__as-provided_ignore_all.txt  Capital A__auto_ignore_super.txt  Capital A__auto_resolve_all.txt  cdt__auto_resolve_all.txt  ditch__auto_resolve_all.txt  double-hanging__auto_resolve_all.txt  gh_issue__auto_resolve_all.txt  guitar no box__f32_auto_ignore_all.txt  guitar no box__f64_auto_resolve_all.txt  island__auto_ignore_all.txt  issue-142-double-hanging-edge__auto_ignore_all.txt  issue-42-multiple-boundary-overlaps__conforming_f64_auto_ignore_auto.txt  kidney__auto_resolve_all.txt
viz/CDT.Viz/: App.xaml  App.xaml.cs  CDT.Viz.csproj  MainWindow.xaml  MainWindow.xaml.cs
